--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
+        "@nuxtjs/vuetify": "^1.11.3",
         "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
         "cross-env": "^7.0",
+        "deepmerge": "^4.2.2",
         "jquery": "^3.2",
         "laravel-mix": "^6.0.19",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
-        "sass-loader": "^8.0.0",
+        "sass": "^1.34.0",
+        "sass-loader": "^8.0.2",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.10"
@@ -28,6 +30,7 @@
     "dependencies": {
         "bootstrap-vue": "^2.21.2",
         "vue-form-generator": "^2.3.4",
-        "vue-form-wizard": "^0.8.4"
+        "vue-form-wizard": "^0.8.4",
+        "vuelidate": "^0.7.6"
     }
 }
